Fix alignment of uploaded media to be display: block; aligned

--- a/static/css/twtxt.css
+++ b/static/css/twtxt.css
@@ -1,3 +1,7 @@
+article p img {
+    display: block;
+}
+
 .invisible {
     visibility:hidden;
     width:0;
